cu.txt
[INFO] Compiling...
main.c:151:67: error: expected expression
  151 |     printf("  模式: %s (%s)\n", state->mode == 1 ? "XUI专项" :\n\nstate->mode == 2 ? "S5专项" :\n\nstate->mode == 3 ? "深度全能" : "验真模式", state->work_mode == 1 ? "探索" :\n\nstate->work_mode == 2 ? "探索+验真" : "只留极品");
      |                                                               ^
main.c:151:192: error: expected expression
  151 |     printf("  模式: %s (%s)\n", state->mode == 1 ? "XUI专项" :\n\nstate->mode == 2 ? "S5专项" :\n\nstate->mode == 3 ? "深度全能" : "验真模式", state->work_mode == 1 ? "探索" :\n\nstate->work_mode == 2 ? "探索+验真" : "只留极品");
      |                                                                                                                                                                                ^
main.c:1204:10: error: expected '}'
 1204 |         }
      |          ^
main.c:1160:21: note: to match this '{'
 1160 |     switch (choice) {
      |                     ^
main.c:1204:10: error: expected '}'
 1204 |         }
      |          ^
main.c:1122:30: note: to match this '{'
 1122 | int saia_telegram_menu(void) {
      |                              ^
4 errors generated.
[ERROR] Compilation failed. Check output above.